apply plugin: 'com.android.application'

// For custom app signing config, set BookCatalogue.signing in local.properties to the
// path f a gradle file with the Android signing config. eg.
//
//    BookCatalogue.signing=O\:/Documents/BookCatalogue Dev/KeyStore/bcSigningConfig.gradle
//
def SigningProperty = "BookCatalogue.signing"
Properties properties = new Properties()
properties.load(project.rootProject.file('local.properties').newDataInputStream())
def BcSigning = properties.getProperty(SigningProperty)

if(BcSigning != null && (new File(BcSigning)).exists()) {
    apply from: BcSigning
}

buildscript {
    repositories {
        google()
        mavenCentral()
    }
    dependencies {
        classpath libs.gradle
    }
}

allprojects {
    repositories {
        google()
        mavenCentral()
    }
}

dependencies {
    implementation libs.androidx.legacy.support.v4
    implementation libs.androidx.appcompat
//    implementation "com.android.support:support-core-utils:28.0.3"
//    implementation "com.android.support:android.support.v7.app.ActionBar:28.0.0"
    // Compile all libraries from 'libs' folder
    implementation fileTree(include: '*.jar', dir: 'libs')
    implementation libs.material
    implementation libs.play.services.vision
    implementation libs.androidx.room.common.jvm
    implementation libs.firebase.firestore
    implementation libs.androidx.room.runtime
    annotationProcessor libs.androidx.room.compiler
}

android {
        namespace = 'com.eleybourn.bookcatalogue'
//    signingConfigs {
//        Default {
//            storeFile file('O:\\Documents\\BookCatalogue Dev\\KeyStore\\bc_key_evan')
//            storePassword 'foobar'
//            keyAlias = 'bookcatalogue'
//            keyPassword 'foobar'
//        }
//    }
//
//    buildTypes {
//        release {
//            signingConfig signingConfigs.Default
//        }
//        debug {
//            signingConfig signingConfigs.Default
//        }
//    }
    compileSdkVersion 36

    packagingOptions {
        resources {
            excludes += ['META-INF/NOTICE.txt', 'META-INF/LICENSE.txt']
        }
    }
    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs += ['-Xlint:deprecation']
    }
    // !!! Commented to use values from the manifest
//    defaultConfig {
//        minSdkVersion 7
//        targetSdkVersion 16
//        versionCode 169
//    }
    sourceSets {
        main {
            manifest.srcFile 'AndroidManifest.xml'
            java.srcDirs = ['src']
            resources.srcDirs = ['src']
            aidl.srcDirs = ['src']
            renderscript.srcDirs = ['src']
            res.srcDirs = ['res']
            assets.srcDirs = ['assets']
        }
    }
    defaultConfig {
        minSdkVersion 27
        targetSdkVersion 36
    }

    flavorDimensions "distributor"
    productFlavors {
        distPlay {
            // Assigns this product flavor to the "distributor" flavor dimension.
            // This property is optional if you are using only one dimension.
            dimension "distributor"
//            applicationIdSuffix ".demo"
            versionNameSuffix "-distplay"
            buildConfigField 'boolean', 'IS_DONATE_ALLOWED', 'false'
        }
        distOther {
            dimension "distributor"
//            applicationIdSuffix ".full"
            versionNameSuffix "-distoth"
            buildConfigField 'boolean', 'IS_DONATE_ALLOWED', 'true'
        }
    }
    compileOptions {
        sourceCompatibility = 11
        targetCompatibility = 11
    }
    lint {
        disable 'MissingTranslation'
    }
    buildFeatures {
        renderScript = true
        aidl = true
        viewBinding = false
        buildConfig = true
    }
}
